--- a/cart.css
+++ b/cart.css
@@ -1,5 +1,59 @@
+#root{
+    text-transform: capitalize;
+}
+
+body{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.cart h2{
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 3rem;
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
 .cart-item{
+    display: grid;
+    align-items: center;
+    grid-template-columns: auto 1fr auto;
+    grid-column-gap: 1.5rem;
+    margin: 1.5rem 0;
+}
+
+.item-container{
+    display: block;
+    padding: 0 100px;
+}
+
+nav{
+    background: #2680c0;
+    background: var(--clr-primary);
+    padding: 1.25rem 2rem;
+}
+
+nav svg{
+    width: 2rem;
+    fill: white;
+}
+
+.amount-container{
+    position: absolute;
+    top: -.85rem;
+    right: -.85rem;
+    width: 1.75rem;
+    height: 1.75rem;
+    border-radius: 50%;
+    background: #85c6f4;
     display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.total-amount{
+    color: white;
+    font-size: 1.25rem;
 }
 
 .cart-item img{
@@ -8,23 +62,34 @@
     object-fit: cover;
 }
 
-.nav{
-    background: #2680c0;
-    background: var(--clr-primary);
-    padding: 1.25rem 2rem;
+nav {
+    padding: 1.25rem 7.5rem;
+    background-color: #2680c0;
 }
 
 .nav-center{
-    max-width: 50rem;
-    max-width: var(--fixed-width);
     width: 100%;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     display: flex;
     justify-content: space-between;
     align-items: center;
+    /* padding: 0 30px; */
 }
 
 .nav-container{
     display: block;
     position: relative;
+}
+
+.cart{
+    min-height: calc(100vh - 120px);
+    width: 90vw;
+    margin: 0px auto 0;
+    padding: 1.5rem 0;
+    max-width: 50rem;
+    max-width: var(--fixed-width);
+}
+
+.amount{
+    text-align: center;
 }
